[gd_scene load_steps=10 format=3 uid="uid://c6x3lqimijlr2"]

[ext_resource type="StyleBox" uid="uid://hwejo0a1xhm3" path="res://Styles/Button_sobre.tres" id="1_vxhp0"]
[ext_resource type="StyleBox" uid="uid://cu8pt5b8nlmox" path="res://Styles/Button_pulsat.tres" id="2_cvgxm"]
[ext_resource type="StyleBox" uid="uid://dbhs4t0dai3a8" path="res://Styles/Button_normal.tres" id="2_uisq5"]
[ext_resource type="Texture2D" uid="uid://bi3hfjgkfmg7n" path="res://Sprites/fondo.jpg" id="3_dgq7b"]
[ext_resource type="Script" path="res://Scripts/menu_principal.gd" id="4_4fy27"]
[ext_resource type="Texture2D" uid="uid://c22y70uewi6yu" path="res://Sprites/Gui/1.png" id="6_v7bg7"]
[ext_resource type="Texture2D" uid="uid://c82uh6lvuk7sr" path="res://Sprites/Gui/2.png" id="7_f3wty"]

[sub_resource type="Theme" id="Theme_i5wye"]
Button/font_sizes/font_size = 60
Button/styles/hover = ExtResource("1_vxhp0")
Button/styles/hover_pressed = ExtResource("2_cvgxm")
Button/styles/normal = ExtResource("2_uisq5")
Button/styles/pressed = ExtResource("2_cvgxm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_igoob"]
texture = ExtResource("3_dgq7b")
modulate_color = Color(0.720467, 0.720468, 0.720467, 1)

[node name="MENU" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_i5wye")
script = ExtResource("4_4fy27")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1935.0
offset_bottom = 1095.0
theme_override_styles/panel = SubResource("StyleBoxTexture_igoob")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.5
offset_top = -84.0
offset_right = 247.5
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="Start Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Start Game"
icon_alignment = 1

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit"
icon_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -446.5
offset_top = -314.0
offset_right = 446.5
offset_bottom = -175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 170
text = "REVERBATION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 216.0
offset_top = 33.0
offset_right = -203.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_v7bg7")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 216.0
offset_top = 33.0
offset_right = -203.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_f3wty")
expand_mode = 1
stretch_mode = 5

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.001

[connection signal="pressed" from="VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
